@@ -1,5 +1,12 @@
 2010-08-31  Gary V. Vaughan  <gary@gnu.org>
 
+	build: avoid unnecessary directory changes in Makefile rules.
+	* Makefile.am (doc/notes.txt, libltdl/m4/ltversion.m4,
+	(libltdl/config/ltmain.m4sh, libtoolize.in, libltdl/Makefile.am)
+	(libltdl/config/mkstamp, tests/testsuite, tests/defs.in): Avoid
+	unnecessary `cd' commands by using fully qualified paths to files
+	outside of current directory.
+
 	build: compare `revision' rather than `correctver' in Makefile.am.
 	* Makefile.am (rebuild): Set the shell variable `revision' rather
 	than `correctver' for clarity of purpose.
